--- a/public/css/chuck_style.css
+++ b/public/css/chuck_style.css
@@ -58,10 +58,14 @@ h3,p {
  margin:10px 0 0
 }
 h3 {
- font-size:28px;
- font-weight:300;
- margin:0 0 10px;
- padding:0
+  color: #f15b23;
+  font-size:28px;
+  font-weight:300;
+  margin:0 0 10px;
+  padding:0;
+  font-weight: bold;
+  
+
 }
 code {
  overflow-wrap:break-word;
