--- a/public/css/blogs.css
+++ b/public/css/blogs.css
@@ -21,7 +21,7 @@
     transition: background-color 1s ease 0s;
   }
   .navbar-left {
-    position: relative;
+    position: absolute;
     left: 70%;
   }
   .navbar-default .navbar-brand {
