thinking article ~ blog components & update navbar style and utilities

--- a/public/css/blogs.css
+++ b/public/css/blogs.css
@@ -12,18 +12,43 @@
 }
 
 /* Style the top navigation bar */
-.navbar {
+/* .navbar {
+    position: fixed;
+    top: 0;
     height: 0px;
     background-color: transparent;
     border: none;
     color: white;
     z-index: 100;
     transition: background-color 1s ease 0s;
-  }
-  .navbar-left {
-    position: absolute;
-    left: 70%;
-  }
+} */
+nav {
+  display:block
+}
+
+.nav { 
+  position:fixed;
+  top:0;
+  left:0;
+  z-index:3;
+  width:100%;
+  background:#fff
+}
+
+.nav .nav-container{
+  display:flex;
+  align-items:center
+}
+.nav .nav-container{
+  padding:0 1.5rem;
+  height:55px;
+  max-width:800px;
+  margin:auto;
+  justify-content:space-between;
+  transition:height .3s ease
+}
+.nav .brand a{display:flex;align-items:center;color:#333;margin-right:0;font-weight:600;font-size:1.1rem}.nav .brand a:focus,.nav .brand a:hover{color:#000}.nav .brand .text{display:none}.nav .links{display:flex;flex-direction:row;justify-content:flex-end;flex:1 1;margin:0}.nav .links a{display:flex;align-items:center;font-size:1.05rem;font-weight:500;padding:1rem .75rem;margin:0;color:rgba(0,0,0,.45);line-height:1.2;text-align:center}.nav .links a:active,.nav .links a:hover{color:#111}.favicon{height:23px;width:23px;margin-bottom:0}button.dark-switcher{-webkit-appearance:none;border:0;margin:0;background:transparent}button.dark-switcher:focus{outline:none}.theme-icon{height:18px;width:18px;margin-bottom:0}.kofi{margin:0;max-width:35px}@media (min-width:850px){.nav.scroll{box-shadow:1px 2px 18px rgba(0,0,0,.1)}.nav.scroll .nav-container{height:60px}.nav.scroll .links a.active,.nav.scroll .links a:hover{color:#111;border-bottom:2px solid #5183f5}.nav.scroll .links a:active{color:#111;border-bottom:2px dashed #5183f5}.nav .nav-container{height:90px;padding:0 2rem}.nav .nav-container .brand a{font-size:1.3rem}.nav .nav-container .brand .text{display:block}.nav .nav-container .links{display:flex;flex-direction:row;justify-content:space-between;flex:unset;height:100%}.nav .nav-container .links a{font-size:1.2rem;margin:0 1rem;padding:1rem .5rem;border-bottom:2px solid transparent}.nav .nav-container .links a.active{color:#111}.nav .nav-container a.donate-button{padding:.5rem 1.25rem}.nav .nav-container a.donate-button .text{display:block}.nav .nav-container a.donate-button .emoji-in-button{margin:.25rem 0 0 .75rem}.patreon{margin:0;border-radius:4px}.kofi{margin:0;max-width:38px}
+.nav.scroll{background:#FFF;border-color:#202020}.dark .nav .brand a{color:#c1c6d0}.dark .nav .brand a:hover{color:#eee}.dark .nav .links a{color:#969eaf}.dark .nav .links a.active,.dark .nav .links a:hover{color:#b3b9c5}
   .navbar-default .navbar-brand {
     margin-top: 10px;
     color: white;
@@ -117,4 +142,4 @@
     margin-bottom: 24px;
     padding: 23px 0;
 
-}
+}}
